--- a/index.html
+++ b/index.html
@@ -443,8 +443,102 @@
                         </li>
                     </ul>
                 </div>
+                <div class="subscribe">
+                    <p class="footer-soc-text">Subscribe</p>
+                    <div class="send-email">
+                        <input 
+                        type="email"
+                        name="sub-email"
+                        class="subscribe-email"
+                        id="sub-email"
+                        placeholder="E-mail"
+                        />
+                        <button type="submit" class="sub-btn">
+                            Subscribe
+                            <svg class="icon-send" width="24" height="20">
+                                <use href="./images/icons.svg#icon-icon-send"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
                                 
             </div>
         </footer>
+        <div class="backdrop">
+            <div class="modal">
+                <button type="button" class="modal-close-btn">
+                <svg class="modal-close-icon" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close-black"></use>
+                </svg>
+                </button>
+                <p class="modal-title">Leave your contacts and we will call you back</p>
+                <form class="modal-form">
+                    <div class="modal-field">
+                        <label for="user-name" class="form-label">Name</label>
+                        <div class="modal-input-wrap">
+                            <input class="form-input"
+                                type="text" 
+                                name="user-name"
+                                id="user-name"
+                            />
+                            <svg class="modal-icon" width="12" height="12">  
+                                <use href="./images/icons.svg#icon-Vector3"></use>
+                            </svg>
+                        </div>
+                    </div>                 
+                    <div class="modal-field">
+                        <label for="user-phone" class="form-label">Phone</label>
+                        <div class="modal-input-wrap">
+                            <input class="form-input"
+                                type="tel" 
+                                name="user-phone"
+                                id="user-phone"
+                                required
+                            />
+                            <svg class="modal-icon" width="13" height="13">
+                                    <use href="./images/icons.svg#icon-Vector1"></use>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="modal-field">
+                        <label for="user-email" class="form-label">Email</label>
+                        <div class="modal-input-wrap">
+                            <input class="form-input"
+                                type="email" 
+                                name="user-email"
+                                id="user-email"
+                            />
+                            <svg class="modal-icon" width="15" height="12">
+                                <use href="./images/icons.svg#icon-Vector2"></use>
+                            </svg>
+                        </div>
+                    </div>                    
+                    <div class="modal-field">
+                        <label class="form-label">Comment</label>
+                        <textarea class="form-input coment" name="user-comment" placeholder="Text input"></textarea>
+                    </div>
+
+                    <div class="modal-field">
+                        <input 
+                        type="checkbox" 
+                        name="policy" 
+                        id="policy"
+                        value="true"
+                        class="form-check visually-hidden"
+                        />
+                        <label for="policy" class="check-text">
+                            <span>
+                                <svg class="check-icon" width="10" height="8">
+                                <use href="./images/icons.svg#icon-check"></use>
+                                </svg>
+                            </span>
+                            I accept the terms and conditions of the
+                            <a href="">Privacy Policy</a>
+                        </label>
+                    </div>
+                    <button class="form-btn" type="submit">Send</button>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
