--- a/index.html
+++ b/index.html
@@ -444,27 +444,28 @@
                     </ul>
                 </div>
                 <div class="subscribe">
-                    <p class="footer-soc-text">Subscribe</p>
-                    <div class="send-email">
-                        <input 
-                        type="email"
-                        name="sub-email"
-                        class="subscribe-email"
-                        id="sub-email"
-                        placeholder="E-mail"
-                        />
+                    <p class="form-title">Subscribe</p>
+                    <form class="footer-form">
+                        <label for="sub-email">                            
+                            <input 
+                            type="email"
+                            name="sub-email"
+                            class="footer-sub-text"
+                            id="sub-email"
+                            placeholder="E-mail" class="footer-email-placeh"
+                            />
+                        </label>                  
                         <button type="submit" class="sub-btn">
                             Subscribe
-                            <svg class="icon-send" width="24" height="20">
+                            <svg class="icon-send" width="24" height="24">
                                 <use href="./images/icons.svg#icon-icon-send"></use>
                             </svg>
                         </button>
-                    </div>
-                </div>
-                                
+                    </form>
+                </div>                                
             </div>
         </footer>
-        <div class="backdrop">
+        <div class="backdrop is-open">
             <div class="modal">
                 <button type="button" class="modal-close-btn">
                 <svg class="modal-close-icon" width="8" height="8">
@@ -481,7 +482,7 @@
                                 name="user-name"
                                 id="user-name"
                             />
-                            <svg class="modal-icon" width="12" height="12">  
+                            <svg class="modal-icon" width="18" height="24">  
                                 <use href="./images/icons.svg#icon-Vector3"></use>
                             </svg>
                         </div>
@@ -495,7 +496,7 @@
                                 id="user-phone"
                                 required
                             />
-                            <svg class="modal-icon" width="13" height="13">
+                            <svg class="modal-icon" width="18" height="24">
                                     <use href="./images/icons.svg#icon-Vector1"></use>
                             </svg>
                         </div>
@@ -508,32 +509,32 @@
                                 name="user-email"
                                 id="user-email"
                             />
-                            <svg class="modal-icon" width="15" height="12">
+                            <svg class="modal-icon" width="18" height="24">
                                 <use href="./images/icons.svg#icon-Vector2"></use>
                             </svg>
                         </div>
                     </div>                    
-                    <div class="modal-field">
-                        <label class="form-label">Comment</label>
+                    <div class="modal-field-comment">
+                        <label class="form-label" for="user-comment">Comment</label>
                         <textarea class="form-input coment" name="user-comment" placeholder="Text input"></textarea>
                     </div>
 
-                    <div class="modal-field">
+                    <div class="modal-field check">
                         <input 
                         type="checkbox" 
-                        name="policy" 
-                        id="policy"
+                        name="user-privacy" 
+                        id="user-privacy"
                         value="true"
                         class="form-check visually-hidden"
                         />
-                        <label for="policy" class="check-text">
-                            <span>
+                        <label for="user-privacy" class="check-text">
+                            <span class="check-privacy">
                                 <svg class="check-icon" width="10" height="8">
                                 <use href="./images/icons.svg#icon-check"></use>
                                 </svg>
                             </span>
                             I accept the terms and conditions of the
-                            <a href="">Privacy Policy</a>
+                            <a class="privacy-link" href="">Privacy Policy</a>
                         </label>
                     </div>
                     <button class="form-btn" type="submit">Send</button>
