--- a/index.html
+++ b/index.html
@@ -446,13 +446,13 @@
                 <div class="subscribe">
                     <p class="form-title">Subscribe</p>
                     <form class="footer-form">
-                        <label for="sub-email">                            
+                        <label class="footer-label" for="sub-email">                            
                             <input 
                             type="email"
                             name="sub-email"
                             class="footer-sub-text"
                             id="sub-email"
-                            placeholder="E-mail" class="footer-email-placeh"
+                            placeholder="E-mail" 
                             />
                         </label>                  
                         <button type="submit" class="sub-btn">
@@ -515,7 +515,7 @@
                         </div>
                     </div>                    
                     <div class="modal-field-comment">
-                        <label class="form-label" for="user-comment">Comment</label>
+                        <label class="form-label">Comment</label>
                         <textarea class="form-input coment" name="user-comment" placeholder="Text input"></textarea>
                     </div>
 
