--- a/index.html
+++ b/index.html
@@ -515,8 +515,8 @@
                         </div>
                     </div>                    
                     <div class="modal-field-comment">
-                        <label class="form-label">Comment</label>
-                        <textarea class="form-input coment" name="user-comment" placeholder="Text input"></textarea>
+                        <label class="form-label" for="user-comment">Comment</label>
+                        <textarea class="form-input coment" id="user-comment" placeholder="Text input"></textarea>
                     </div>
 
                     <div class="modal-field check">
@@ -533,6 +533,23 @@
                                 <use href="./images/icons.svg#icon-check"></use>
                                 </svg>
                             </span>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                             I accept the terms and conditions of the
                             <a class="privacy-link" href="">Privacy Policy</a>
                         </label>
