--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                     </div>                    
                     <div class="modal-field-comment">
                         <label class="form-label" for="user-comment">Comment</label>
-                        <textarea class="form-input coment" id="user-comment" placeholder="Text input"></textarea>
+                        <textarea class="form-input coment" id="user-comment" name="user-comment" placeholder="Text input"></textarea>
                     </div>
 
                     <div class="modal-field check">
