--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                                 id="user-name"
                             />
                             <svg class="modal-icon" width="18" height="24">  
-                                <use href="./images/icons.svg#icon-Vector3"></use>
+                                <use href="./images/icons.svg#icon-men"></use>
                             </svg>
                         </div>
                     </div>                 
@@ -497,7 +497,7 @@
                                 required
                             />
                             <svg class="modal-icon" width="18" height="24">
-                                    <use href="./images/icons.svg#icon-Vector1"></use>
+                                <use href="./images/icons.svg#icon-phone-black"></use>
                             </svg>
                         </div>
                     </div>
@@ -510,7 +510,7 @@
                                 id="user-email"
                             />
                             <svg class="modal-icon" width="18" height="24">
-                                <use href="./images/icons.svg#icon-Vector2"></use>
+                                <use href="./images/icons.svg#icon-email-black"></use>
                             </svg>
                         </div>
                     </div>                    
